--- a/src/app/Components/product/product.component.html
+++ b/src/app/Components/product/product.component.html
@@ -1,1 +1,105 @@
-<p>product works!</p>
+<div class="container product-container">
+    <div class="row mt-2">
+        <div class="col-md-12">
+            <button type="button" class="btn btn-primary btn-add" data-toggle="modal" data-target="#modelId">Add Product</button>
+            <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            
+                            <h5 class="modal-title">
+                                <ng-template [ngIf]="updateOption===null">Add Product</ng-template>
+                                <ng-template [ngIf]="updateOption!=null">Update Product</ng-template>
+                            </h5>
+                            <button type="button"class="close" data-dismiss="modal" aria-label="Close" (click)="changeHeading()"><span aria-hidden="true">&times;</span></button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="" [formGroup]="productForm">
+                                <div class="form-group row">
+                                    <div class="col-md-4">
+                                        <label for="Category Id">Category Id</label>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="dropdown open">
+                                            <button class="btn btn-secondary dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{selectedCategory.categoryName}}</button>
+                                            <div class="dropdown-menu" aria-labelledby="triggerId" style="height: 200px !important; min-width: 50% !important; overflow-x: hidden !important;">
+                                                <button class="dropdown-item" *ngFor="let c of categories" (click)="getCategoryId(c)">{{c.categoryId}} - {{c.categoryName}}</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-md-4">
+                                        <label for="Product Type Id">Product Type Id</label>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="dropdown open">
+                                            <button class="btn btn-secondary dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{selectedProductType.productTypeName}}</button>
+                                            <div class="dropdown-menu" aria-labelledby="triggerId" style="height: 200px !important; min-width: 50% !important; overflow-x: hidden !important;">
+                                                <button class="dropdown-item" *ngFor="let p of productTypes" (click)="getProductTypeId(p)">{{p.productTypeId}} - {{p.productTypeName}}</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-md-4">
+                                        <label for="Product Name">Product Name</label>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <input type="text" class="form-control"id="productName" placeholder="Product Name" formControlName="productName">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-md-4">
+                                        <label for="Product Base Price">Product Base Price</label>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <input type="number" class="form-control"id="productBasePrice" placeholder="Product Base Price" formControlName="productBasePrice">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-md-4">
+                                        <label for="Product Image">Product Image</label>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <input type="text" class="form-control"id="ProductImage" placeholder="Product Image" formControlName="productImage">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary btn-save"  data-dismiss="modal"  (click)="onFormSubmit()">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Category Id</th>
+                        <th>Product Type Id</th>
+                        <th>Product Name</th>
+                        <th>Product Base Price</th>
+                        <th>Product Image</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let prod of products">
+                        <td>{{prod.productId}}</td>
+                        <td>{{prod.categoryId}}</td>
+                        <td>{{prod.productTypeId}}</td>
+                        <td>{{prod.productName}}</td>
+                        <td>{{prod.productBasePrice}}</td>
+                        <td>{{prod.productImage}}</td>
+                        <td>
+                            <button class="btn btn-primary btn-update" (click)="loadFormToEdit(prod.productId)" data-toggle="modal" data-target="#modelId">Update</button> |
+                            <button class="btn btn-danger" (click)="deleteProduct(prod.productId)">Delete</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
