--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,30 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+.modal-header{
+    background-color: rgb(0, 180, 180) !important;
+    font-family: 'Montserrat', sans-serif !important;
+    color: white !important;
+}
+.btn-modal-dismis{
+    background-color: rgb(221, 9, 9) !important;
+    border: none !important;
+}
+.btn-save{
+    background-color: rgb(0, 180, 180) !important;
+    border: none !important;
+}
+.dropdown-menu{
+    background-color: rgb(0, 180, 180) !important;
+    color: white !important;
+    font-family: 'Montserrat', sans-serif !important;
+    height: 200px !important;
+    min-width: 50% !important; 
+    overflow-x: hidden !important;
+}
+.dropdown-item{
+    color: white !important;
+    font-family: 'Montserrat', sans-serif !important;
+}
+.dropdown-item:hover{
+    color: rgb(0, 180, 180) !important;
+}
