quantity crud complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,20 +27,36 @@
                   <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">Options</a>
                   <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" routerLink="/sport/linkSport">Link Sport</a>
-                    <a class="dropdown-item" routerLink="/sport/linkTournament">Link Tournament</a>
-                    <a class="dropdown-item" routerLink="/sport/linkBetType">Link BetType</a>
-                    <a class="dropdown-item" routerLink="/sport/batTypeMarket">Link BetType Market</a>
+                    <a class="dropdown-item" routerLink="/design2print/quantity">Quantity</a>
+                    <a class="dropdown-item" routerLink="">Design Service</a>
+                    <a class="dropdown-item" routerLink="">Finished Format</a>
+                    <a class="dropdown-item" routerLink="">Material</a>
+                    <a class="dropdown-item" routerLink="">Color</a>
+                    <a class="dropdown-item" routerLink="">Refinement</a>
+                    <a class="dropdown-item" routerLink="">Book Binding</a>
+                    <a class="dropdown-item" routerLink="">Finishing</a>
+                    <a class="dropdown-item" routerLink="">PDF</a>
+                    <a class="dropdown-item" routerLink="">Options</a>
+                    <a class="dropdown-item" routerLink="">Pages</a>
+                    <a class="dropdown-item" routerLink="">Discount</a>
                   </div>
                 </li>
                 <li class="nav-item dropdown text-dark">
                   <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">Linking Associations</a>
+                    aria-expanded="false">Linking Options</a>
                   <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" routerLink="/sport/linkSport">Link Sport</a>
-                    <a class="dropdown-item" routerLink="/sport/linkTournament">Link Tournament</a>
-                    <a class="dropdown-item" routerLink="/sport/linkBetType">Link BetType</a>
-                    <a class="dropdown-item" routerLink="/sport/batTypeMarket">Link BetType Market</a>
+                    <a class="dropdown-item" routerLink="">Product Type Quantity</a>
+                    <a class="dropdown-item" routerLink="">Product Type Design Service</a>
+                    <a class="dropdown-item" routerLink="">Product Type Finished Format</a>
+                    <a class="dropdown-item" routerLink="">Product Type Material</a>
+                    <a class="dropdown-item" routerLink="">Product Type Color</a>
+                    <a class="dropdown-item" routerLink="">Product Type Refinement</a>
+                    <a class="dropdown-item" routerLink="">Product Type Book Binding</a>
+                    <a class="dropdown-item" routerLink="">Product Type Finishing</a>
+                    <a class="dropdown-item" routerLink="">Product Type PDF</a>
+                    <a class="dropdown-item" routerLink="">Product Type Options</a>
+                    <a class="dropdown-item" routerLink="">Product Type Pages</a>
+                    <a class="dropdown-item" routerLink="">Product Type Discount</a>
                   </div>
                 </li>
               </ul>
