--- a/src/app/Components/product-type/product-type.component.html
+++ b/src/app/Components/product-type/product-type.component.html
@@ -1,7 +1,13 @@
-<div class="container producttype-container">
+<div class="container style-container">
     <div class="row mt-2">
-        <div class="col-md-12">
-            <button type="button" class="btn btn-primary btn-add" data-toggle="modal" data-target="#modalId" (click)="setHeading()">Add Product Type</button>
+        <div class="col-md-2">
+            <button type="button" class="link link-four pulse-grow-on-hover" data-toggle="modal" data-target="#modalId" (click)="setHeading()">Add New</button>
+        </div>
+        <div class="col-md-8">
+            <h2 class="headings"><span>P</span>roduct <span>T</span>ype</h2>
+        </div>
+        <div class="col-md-2">
+
         </div>
         <div class="modal fade" id="modalId" tabindex="-1" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -16,17 +22,17 @@
                     <div class="modal-body">
                         <form action="" [formGroup]="productTypeForm">
                             <div class="form-group row">
-                                <div class="col-md-4">
-                                    <label for="Product Type Name">Prouct Type Name</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <input type="text" class="form-control" id="ProductTypeName" placeholder="Product Type Name" formControlName="ProductTypeName">
+                                <div class="main_div">
+                                    <div class="group">
+                                        <input type="text" required="required" class="form-control" id="ProductTypeName" formControlName="productTypeName"/>
+                                        <label>Product Type Name</label>
+                                      </div>
                                 </div>
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary btn-save"  data-dismiss="modal"  (click)="onFormSubmit()">Save</button>
+                        <button type="submit" class="btn btn-primary btn-save"  data-dismiss="modal"  (click)="onFormSubmit()" [disabled]="!productTypeForm.valid">Save</button>
                     </div>
                 </div>
             </div>
@@ -44,8 +50,8 @@
                     <td>{{producttype.productTypeId}}</td>
                     <td>{{producttype.productTypeName}}</td>
                     <td>
-                        <button type="button" class="btn btn-primary btn-update" data-toggle="modal" data-target="#modalId" (click)="updateProductType(producttype.productTypeId)">Update</button> |
-                        <button type="button" class="btn btn-danger" (click)="deleteProductType(producttype.productTypeId)">Delete</button> 
+                        <button type="button" class="btn btn-update link2 link-four pulse-grow-on-hover" data-toggle="modal" data-target="#modalId" (click)="updateProductType(producttype.productTypeId)"><fa-icon [icon]="pencil"></fa-icon></button>
+                        <button type="button" class="btn btn-danger link3 link-four pulse-grow-on-hover" (click)="deleteProductType(producttype.productTypeId)"><fa-icon [icon]="trash"></fa-icon></button> 
                     </td>
                 </tr>
             </tbody>
