finsihed format crud completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
                   <div class="dropdown-menu" aria-labelledby="dropdownId">
                     <a class="dropdown-item" routerLink="/design2print/quantity">Quantity</a>
                     <a class="dropdown-item" routerLink="/design2print/designService">Design Service</a>
-                    <a class="dropdown-item" routerLink="">Finished Format</a>
+                    <a class="dropdown-item" routerLink="/design2print/finishedFormat">Finished Format</a>
                     <a class="dropdown-item" routerLink="">Material</a>
                     <a class="dropdown-item" routerLink="">Color</a>
                     <a class="dropdown-item" routerLink="">Refinement</a>
