--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
                     <a class="dropdown-item" routerLink="/design2print/quantity">Quantity</a>
                     <a class="dropdown-item" routerLink="/design2print/designService">Design Service</a>
                     <a class="dropdown-item" routerLink="/design2print/finishedFormat">Finished Format</a>
-                    <a class="dropdown-item" routerLink="">Material</a>
+                    <a class="dropdown-item" routerLink="/design2print/material">Material</a>
                     <a class="dropdown-item" routerLink="">Color</a>
                     <a class="dropdown-item" routerLink="">Refinement</a>
                     <a class="dropdown-item" routerLink="">Book Binding</a>
