color crud complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
                     <a class="dropdown-item" routerLink="/design2print/designService">Design Service</a>
                     <a class="dropdown-item" routerLink="/design2print/finishedFormat">Finished Format</a>
                     <a class="dropdown-item" routerLink="/design2print/material">Material</a>
-                    <a class="dropdown-item" routerLink="">Color</a>
+                    <a class="dropdown-item" routerLink="/design2print/color">Color</a>
                     <a class="dropdown-item" routerLink="">Refinement</a>
                     <a class="dropdown-item" routerLink="">Book Binding</a>
                     <a class="dropdown-item" routerLink="">Finishing</a>
