--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
                     <a class="dropdown-item" routerLink="/design2print/finishedFormat">Finished Format</a>
                     <a class="dropdown-item" routerLink="/design2print/material">Material</a>
                     <a class="dropdown-item" routerLink="/design2print/color">Color</a>
-                    <a class="dropdown-item" routerLink="">Refinement</a>
+                    <a class="dropdown-item" routerLink="/design2print/refinement">Refinement</a>
                     <a class="dropdown-item" routerLink="">Book Binding</a>
                     <a class="dropdown-item" routerLink="">Finishing</a>
                     <a class="dropdown-item" routerLink="">PDF</a>
