pdf crud complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
                     <a class="dropdown-item" routerLink="/design2print/refinement">Refinement</a>
                     <a class="dropdown-item" routerLink="/design2print/bookbinding">Book Binding</a>
                     <a class="dropdown-item" routerLink="/design2print/finishing">Finishing</a>
-                    <a class="dropdown-item" routerLink="">PDF</a>
+                    <a class="dropdown-item" routerLink="/design2print/pdf">PDF</a>
                     <a class="dropdown-item" routerLink="">Options</a>
                     <a class="dropdown-item" routerLink="">Pages</a>
                     <a class="dropdown-item" routerLink="">Discount</a>
