--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
                     <a class="dropdown-item" routerLink="/design2print/finishing">Finishing</a>
                     <a class="dropdown-item" routerLink="/design2print/pdf">PDF</a>
                     <a class="dropdown-item" routerLink="">Options</a>
-                    <a class="dropdown-item" routerLink="">Pages</a>
+                    <a class="dropdown-item" routerLink="/design2print/page">Pages</a>
                     <a class="dropdown-item" routerLink="">Discount</a>
                   </div>
                 </li>
