--- a/src/app/Components/discount/discount.component.html
+++ b/src/app/Components/discount/discount.component.html
@@ -1,1 +1,60 @@
-<p>discount works!</p>
+<div class="container style-container">
+    <div class="row mt-2">
+        <div class="col-md-2">
+            <button type="button" class="link link-four pulse-grow-on-hover" data-toggle="modal" data-target="#modalId" (click)="setHeading()">Add New</button>
+        </div>
+        <div class="col-md-8">
+            <h2 class="headings"><span>D</span>iscount</h2>
+        </div>
+        <div class="col-md-2">
+            
+        </div>
+        <div class="modal fade" id="modalId" tabindex="-1" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">
+                            <ng-template [ngIf]="discountUpdate===null">Add Discount</ng-template>
+                            <ng-template [ngIf]="discountUpdate!=null">Update Discount</ng-template>
+                        </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="setHeading()"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="" [formGroup]="discountForm">
+                            <div class="form-group row">
+                                <div class="main_div">
+                                    <div class="group">
+                                        <input type="text" required="required" class="form-control" id="DiscountName" formControlName="discountName"/>
+                                        <label>Discount Name</label>
+                                      </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary btn-save"  data-dismiss="modal" (click)="onFormSubmit()" [disabled]="!discountForm.valid">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Discount Name</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody class="justify-content-center">
+                <tr *ngFor="let d of discounts">
+                    <td>{{d.discountId}}</td>
+                    <td>{{d.discountName}}</td>
+                    <td>
+                        <button type="button" class="btn btn-update link2 link-four pulse-grow-on-hover" data-toggle="modal" data-target="#modalId" (click)="updateDiscount(d.discountId)"><fa-icon [icon]="pencil"></fa-icon></button>
+                        <button type="button" class="btn btn-danger link3 link-four pulse-grow-on-hover" (click)="deleteDiscount(d.discountId)"><fa-icon [icon]="trash"></fa-icon></button> 
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
