--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
                     <a class="dropdown-item" routerLink="/design2print/pdf">PDF</a>
                     <a class="dropdown-item" routerLink="">Options</a>
                     <a class="dropdown-item" routerLink="/design2print/page">Pages</a>
-                    <a class="dropdown-item" routerLink="">Discount</a>
+                    <a class="dropdown-item" routerLink="/design2print/discount">Discount</a>
                   </div>
                 </li>
                 <li class="nav-item dropdown text-dark">
