--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
                   <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">Linking Options</a>
                   <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" routerLink="">Product Type Quantity</a>
+                    <a class="dropdown-item" routerLink="/design2print/productTypeQuantity">Product Type Quantity</a>
                     <a class="dropdown-item" routerLink="">Product Type Design Service</a>
                     <a class="dropdown-item" routerLink="">Product Type Finished Format</a>
                     <a class="dropdown-item" routerLink="">Product Type Material</a>
